# sunmeter

./: .gitignore  CMakeLists.txt  README.md  run.ps1
src/: drag.cpp  drag.hpp  label.cpp  label.hpp  main.cpp
